--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Celia Hoste UI UX Designer Barcelona</title>
+    <title>Celia Hoste UI UX Designer Berlin</title>
     <link href="Img/favicon.ico" rel="icon" type="image/x-icon">
 </head>
 <body>
