--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Celia Hoste UI/UX Designer</title>
+    <title>About Celia Hoste UI/UX Designer
+    </title>
     <link href="Img/favicon.ico" rel="shortcut icon">
 </head>
 <body>
