Linked project pot page

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <div class="project-card_content-wrapper">
                             <h3> Pot | Financial Saving App</h3> 
                             <p>Developed branding for a financial saving app, including logo and style guide. Created wireframes and mockups, ensuring consistency and a mobile-first, responsive design, with user testing for enhanced usability.</p>
-                            <a class="btn" href="#"> See more </a>
+                            <a class="btn" href="project-pot.html"> See more </a>
                         </div>
                     </div>
                     <div class="project-card">
