Updated "alt" on image

--- a/project-pot.html
+++ b/project-pot.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <img src="img/logo.svg" alt="Celia Hoste"> 
+            <img src="img/logo.svg" alt="Celia Hoste logo"> 
             <nav> 
                 <ul>
                     <li><a href="index.html">work</a></li>
@@ -28,7 +28,7 @@
         <div class="overview-content">
             <div class="overview-image">
                 <h2>A Simple App to Manage Your Savings and Finances</h2>
-                <img src="img/pot-cover.webp" alt="cover image"/>
+                <img src="img/pot-cover.webp" alt="cover image of Pot-financial saving app"/>
             </div>
             <a href="files/Pot.pdf" class="case-study-button" target="_blank">View full case study</a>
             <div class="overview-info">
