--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <img src="img/logo.svg" alt="Celia Hoste"> 
+            <img src="img/logo.svg" alt="Celia Hoste logo"> 
             <nav> 
                 <ul>
                     <li><a href="index.html">work</a></li>
