Changed Img/ to img/

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Celia Hoste UI UX Designer Berlin</title>
-    <link href="Img/favicon.ico" rel="icon" type="image/x-icon">
+    <link href="img/favicon.ico" rel="icon" type="image/x-icon">
 </head>
 <body>
     <header>
