Changed <picture> to <div>

--- a/project-pot.html
+++ b/project-pot.html
@@ -93,10 +93,10 @@
             <h2>Final Screens</h2>
             <h3 class="section-subtitle">Mockups</h3>
             <p>The final screens reflect all the improvements made throughout the design process. A responsive layout was implemented, ensuring consistency across devices. The design seamlessly integrates colors, typography, tone, and layout, resulting in a cohesive and user-friendly experience.</p>
-            <pictures>
+            <div class="Responsive and all mockups images">
                 <img src="img/pot-responsive-mockup.webp" alt="responsive-mockups"/>
                 <img src="img/pot-all-mockups.webp" alt="all screens"/>
-            </pictures>
+            </div>
         </div>
       </section> 
     </main>
