--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Celia Hoste UI/UX Designer
-    </title>
+    <title>About Celia Hoste UI/UX Designer</title>
     <link href="Img/favicon.ico" rel="shortcut icon">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
+    <header id="header-section">
         <div class="container">
             <img src="img/logo.svg" alt="Celia Hoste"> 
             <nav> 
@@ -21,7 +21,7 @@
         </div>         
     </header>
     <main>
-        <section class="intro">
+        <section id="intro-section" class="intro">
             <div class="container">
                 <div class="intro-content-wrapper">
                     <h1>About me
@@ -29,25 +29,25 @@
                     <p>I'm Cèlia, a curious, creative person with a love for design—and so much more. Born in Barcelona, I carry my Mediterranean roots wherever I go, and I've proudly called Berlin home for several years.</p>
                 </div>
                 <div class="intro_media-wrapper">
-                    <img src="Img/about.svg" alt="portrait-ilustration">
+                    <img src="img/about.svg" alt="portrait-ilustration">
                 </div>
             </div>
         </section>
-        <section>
+        <section id="content-section">
             <div class="container">
                 <div class="about-content">
                     <div class="about-content_main">
-                        <h2>My Journey</h2>
+                        <h3>My Journey</h3>
                         <p>I'm a UI Designer with a background in fashion and hand-knitwear design. My passion for craftsmanship and hands-on creation has shaped my design approach—whether working with textiles or digital experiences, I find meaning in blending creativity with functionality.
                             I began my career designing collections for brands and as a solo entrepreneur, developing brand identities and telling stories through garments and accessories. This deep understanding of aesthetics, materiality, and storytelling naturally led me to UI design, driven by curiosity to bring my creative vision into the digital space. Now, I craft intuitive, engaging digital experiences, seeing interfaces as another form of craftsmanship—where details matter, and design has the power to shape interactions. Today, I focus on creating meaningful, user-centered experiences that seamlessly blend storytelling with usability.
                             Still, you'll often find me crafting and knitting, a meditative practice that keeps me grounded—but that's another story.<br>Through my journey, I've learned to adapt quickly, balance aesthetics with usability, and approach challenges with effective solutions</p>
-                        <a class="btn" href="files/resume-web.pdf" target="_blank">My Resume</a>
+                        <a href="files/resume-web.pdf" class="button" target="_blank">My Resume</a>
                     </div>
                     <div class="about-content_main--side">
-                        <h2>Skills and Tools </h2>
+                        <h3>Skills and Tools </h3>
                         <div class="lists">
                             <div class="list-wrapper">
-                                <h3>Key Skills</h3> 
+                                <h2>Key Skills</h2> 
                                 <ul>
                                     <li>User interface design</li>
                                     <li> Typography and Iconography</li> 
@@ -66,7 +66,7 @@
                                 </ul>
                             </div>
                             <div class="list-wrapper">
-                                <h3>Tools</h3>
+                                <h2>Tools</h2>
                                 <ul>
                                     <li>Figma </li>
                                     <li>Sketch</li>  
@@ -81,9 +81,9 @@
             </div>
         </section> 
     </main>
-    <footer>
+    <footer id="footer-section">
         <div class="container">
-          <h2>Contact</h2>
+          <h3>Contact</h3>
             <div class="email">
                 <a href="mailto:celiahostedesign@gmail.com">email</a>
             </div>
@@ -91,7 +91,7 @@
                 <a href="https://www.behance.net/celiahoste" target="_blank"> My Portfolio</a>
             </div>
             <div>
-                <img src="linkedin.svg">
+                <a href="www.linkedin.com/in/celiahoste" target="_blank"> Linkedin</a>
             </div>
             <div class="copyright">
                 <p>copyright Celia Hoste 2025</p>
