--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Celia Hoste UI UX Designer Berlin</title>
     <link href="img/favicon.ico" rel="icon" type="image/x-icon">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
+    <header id="header-section">
         <div class="container">
             <img src="img/logo.svg" alt="Celia Hoste logo"> 
             <nav> 
@@ -20,13 +21,13 @@
         </div>         
     </header>
     <main>
-        <section class="hero">
+        <section id="hero-section" class="hero">
             <div class="container">
               <h1>Hi, I'm Cèlia!
                  <span>A UI/UX Designer with experience in fashion design</span>
               </h1>
               <div class="hero_listt-wrapper">
-                <p>I believe</p>
+                <p>I believe,</p>
                 <ul>
                     <li>In creating meaningful, fun and beautiful digital products.</li>
                     <li>In the power of storytelling to connect and inspire.</li>
@@ -35,58 +36,58 @@
               </div>
             </div>
         </section>
-        <section class="projects">
+        <section id="projects-section" class="projects">
             <div class="container">
-                <h2>My work</h2>
+                <h1>My work</h1>
                     <div class="project-card">
                         <div class="project-card_image-wrapper">
-                            <img src="img/cover-magic.webp" alt="Magic Cover">
+                            <img src="img/cover-project-magic.webp" alt="Magic Cover">
                         </div>
                         <div class="project-card_content-wrapper">
                             <h3> Magic | Vintage Clothing online shop</h3> 
                             <p>Defined key functionalities and UI direction for a vintage clothing app. Created wireframes, mood boards, style guides, and mockups for a visually appealing, user-friendly web app</p>
-                            <a class="btn" href="#">See more</a>
+                            <a href="#" class="button">See more</a>
                         </div>
                     </div>
                     <div class="project-card">
                         <div class="project-card_image-wrapper">
-                           <img src="img/cover-pot.webp" alt="Pot Cover">
+                           <img src="img/cover-project-pot.webp" alt="Pot Cover">
                         </div>
                         <div class="project-card_content-wrapper">
                             <h3> Pot | Financial Saving App</h3> 
                             <p>Developed branding for a financial saving app, including logo and style guide. Created wireframes and mockups, ensuring consistency and a mobile-first, responsive design, with user testing for enhanced usability.</p>
-                            <a class="btn" href="project-pot.html"> See more </a>
+                            <a href="project-pot.html" class="button" > See more </a>
                         </div>
                     </div>
                     <div class="project-card">
                         <div class="project-card_image-wrapper">
-                            <img src="img/cover-artis.webp" alt="Artis Cover">
+                            <img src="img/cover-project-artis.webp" alt="Artis Cover">
                         </div>
                         <div class="project-card_content-wrapper">
                             <h3> Artis | Responsive Web App</h3> 
                             <p>Designed a responsive cultural map app focused on accessibility, conducting user research and testing to create an intuitive interface that enhances the exploration of cultural sites.</p>
-                            <a class="btn" href="#"> See more </a>
+                            <a href="#" class="button" > See more </a>
                         </div>
                     </div>
                     <div class="project-card">
                         <div class="project-card_image-wrapper">
-                            <img src="img/cover-craftin.webp" alt="Craftin Cover">
+                            <img src="img/cover-project-craftin.webp" alt="Craftin Cover">
                         </div>
                         <div class="project-card_content-wrapper">
                             <h3> Carftin | Professional Networking App</h3> 
                             <p>Designed high-fidelity mockups for a professional networking hub where artisans and companies can connect to find talent and job opportunities. The mockups were crafted to meet  Android and iOS mobile guidelines.</p>
-                            <a class="btn" href="#"> See more </a>
+                            <a href="#" class="button" > See more </a>
                         </div>
                     </div>
             </div>
             <div>
-                <a class="btn" href="#">All projects</a>
+                <a href="#" class="button">All projects</a>
             </div>
         </section>
     </main>
-    <footer>
+    <footer id="footer-section">
         <div class="container">
-          <h2>Contact</h2>
+          <h3>Contact</h3>
             <div class="email">
                 <a href="mailto:celiahostedesign@gmail.com">email</a>
             </div>
