--- a/project-pot.html
+++ b/project-pot.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Celia Hoste UI UX Designer Financial Project</title>
     <link href="Img/favicon.ico" rel="icon" type="image/x-icon">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
+    <header id="header-section">
         <div class="container">
             <img src="img/logo.svg" alt="Celia Hoste logo"> 
             <nav> 
@@ -20,7 +21,7 @@
         </div>         
     </header>
     <main>
-      <section class="project-overview">
+      <section id="project-overview-section" class="project-overview">
         <div class="overview-header">
             <h1>Pot | Financial Saving App</h1>
             <p>Your Savings Coach</p>
@@ -51,26 +52,26 @@
             </div>
         </div>
       </section> 
-      <section class="case-section onboarding">
+      <section id="onboarding-section" class="case-section onboarding">
         <div class="container">
-            <h2>Onboardings</h2>
-            <h3 class="section-subtitle">Friendly and Professional</h3>
+            <h3>Onboardings</h3>
+            <h2 class="section-subtitle">Friendly and Professional</h2>
             <p>The onboarding screens use simple, vibrant illustrations to create a friendly, engaging experience. The goal is that Pot feels like a personal finance coach in users' pockets, combining a welcoming approach with a professional, trustworthy design.</p>
             <img src="img/pot-onboarding.webp" alt="onboarding-flow"/>
         </div>
       </section> 
-      <section class="case-section tone-voice">
+      <section id="tone-voice-section" class="case-section tone-voice">
         <div class="container">
-            <h2>Tone and Voice</h2>
-            <h3 class="section-subtitle">Clear, Warm, Empowering</h3>
+            <h3>Tone and Voice</h3>
+            <h2 class="section-subtitle">Clear, Warm, Empowering</h2>
             <p>Financial apps often overwhelm with jargon and complexity. Pot's voice is approachable, reassuring and supportive, guiding users with straightforward advice and personalised insights.</p>
             <img src="img/pot-tone-voice.webp" alt="tone-voice visual"/>
         </div>
       </section> 
-      <section class="case-section key-features">
+      <section id="key-features-section" class="case-section key-features">
         <div class="container">
-            <h2>Key Features</h2>
-            <h3 class="section-subtitle">Intuitive and Engaging</h3>
+            <h3>Key Features</h3>
+            <h2 class="section-subtitle">Intuitive and Engaging</h2>
             <ul>
                 <li>Effortlessly track savings and spending</li>
                 <li>Set budgets and categorise expenses</li>
@@ -80,18 +81,18 @@
             <img src="img/pot-key-features.webp" alt="key-features graphics"/>
         </div>
       </section> 
-      <section class="case-section design-journey">
+      <section id="design-journey-section" class="case-section design-journey">
         <div class="container">
-            <h2>Design Journey</h2>
-            <h3 class="section-subtitle">From Wireframe to Final Design</h3>
+            <h3>Design Journey</h3>
+            <h2 class="section-subtitle">From Wireframe to Final Design</h2>
             <p>The design process began with low-fidelity wireframes focused on layout and scalability, evolving through mid-fidelity wireframes that refined content for clarity. User testing guided further refinements, enhancing usability and ensuring a seamless final design.</p>
             <img src="img/pot-design-journey.webp" alt="wireframes-evolution"/>
         </div>
       </section> 
-      <section class="case-section final-screens">
+      <section id="final-screens-section" class="case-section final-screens">
         <div class="container">
-            <h2>Final Screens</h2>
-            <h3 class="section-subtitle">Mockups</h3>
+            <h3>Final Screens</h3>
+            <h2 class="section-subtitle">Mockups</h2>
             <p>The final screens reflect all the improvements made throughout the design process. A responsive layout was implemented, ensuring consistency across devices. The design seamlessly integrates colors, typography, tone, and layout, resulting in a cohesive and user-friendly experience.</p>
             <div class="Responsive and all mockups images">
                 <img src="img/pot-responsive-mockup.webp" alt="responsive-mockups"/>
@@ -100,9 +101,9 @@
         </div>
       </section> 
     </main>
-    <footer>
+    <footer id="footer-section">
         <div class="container">
-          <h2>Contact</h2>
+          <h3>Contact</h3>
             <div class="email">
                 <a href="mailto:celiahostedesign@gmail.com">email</a>
             </div>
