--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </section>
         <section id="projects-section" class="projects">
             <div class="container">
-                <h1>My work</h1>
+                <h2 class="h1">My work</h2>
                     <div class="project-card">
                         <div class="project-card_image-wrapper">
                             <img src="img/cover-project-magic.webp" alt="Magic Cover">
@@ -65,7 +65,7 @@
                         </div>
                         <div class="project-card_content-wrapper">
                             <h3> Artis | Responsive Web App</h3> 
-                            <p>Designed a responsive cultural map app focused on accessibility, conducting user research and testing to create an intuitive interface that enhances the exploration of cultural sites.</p>
+                            <p class="text-l">Designed a responsive cultural map app focused on accessibility, conducting user research and testing to create an intuitive interface that enhances the exploration of cultural sites.</p>
                             <a href="#" class="button" > See more </a>
                         </div>
                     </div>
