Updated size text-l

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                  <span>A UI/UX Designer with experience in fashion design</span>
               </h1>
               <div class="hero_listt-wrapper">
-                <p>I believe,</p>
-                <ul>
+                <p class="text-l">I believe,</p>
+                <ul class="text-l">
                     <li>In creating meaningful, fun and beautiful digital products.</li>
                     <li>In the power of storytelling to connect and inspire.</li>
                     <li>That design can be good and do good.</li>
@@ -65,7 +65,7 @@
                         </div>
                         <div class="project-card_content-wrapper">
                             <h3> Artis | Responsive Web App</h3> 
-                            <p class="text-l">Designed a responsive cultural map app focused on accessibility, conducting user research and testing to create an intuitive interface that enhances the exploration of cultural sites.</p>
+                            <p>Designed a responsive cultural map app focused on accessibility, conducting user research and testing to create an intuitive interface that enhances the exploration of cultural sites.</p>
                             <a href="#" class="button" > See more </a>
                         </div>
                     </div>
